# animove

./: README.md  pyproject.toml
data/raw/: reference.csv
notebooks/: MCO1_draft.ipynb  data_processing.ipynb
src/: __init__.py  haversine.py  janitor.py  reducer.py  transformer.py  util.py
