[project]
name = "animove"
version = "0.1.0"
description = "**Ani**mal **Move**ment project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "nbconvert>=7.17.1",
    "ruff>=0.15.17",
]
